# python-exercicios

./: LICENSE  README.md  poetry_anotation.txt  pyproject.toml
EXERCICIOS/: ex01.js  ex01.py  ex02.py  ex04.py  ex05.py  ex06.py  ex_aluguel_carro.py  ex_calc_media.py  ex_calcula_numero.py  ex_calculadora.py  ex_conversor_real_dolar.py  ex_conversor_temperatura.py  ex_desconto_porcentagem.py  ex_metodos_string.py  ex_operacoes_matematicas.py  ex_pintar_parede.py  ex_salario_aumento.py  ex_tabuada_numero.py  ex_tintas_parede.py  ex_transforma_metro.py  module_exemple.py
